--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,20 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <exec.mainClass>com.mycompany.pruebajava8.Pruebas</exec.mainClass>
     </properties>
+    
+    <dependencies>
+        <!-- org.json para construir JSON de forma segura -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+    </dependencies>
+    
     <name>prueba-fiskaly</name>
 </project>
