--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <version>5.9.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.10.0</version>
+        </dependency>
+
     </dependencies>
     
     <name>prueba-fiskaly</name>
