--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>8</maven.compiler.release>
-        <exec.mainClass>com.mycompany.interfaz.Principal</exec.mainClass>
+        <exec.mainClass>com.mycompany.pruebajava8.Pruebas</exec.mainClass>
     </properties>
     
     <dependencies>
@@ -90,7 +90,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.mycompany.interfaz.Principal</mainClass> 
+                            <mainClass>com.mycompany.main.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -112,7 +112,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin> 
+            </plugin>
         </plugins>
     </build>
 </project>
