Instalador y scrip sql finalizados

--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>8</maven.compiler.release>
-        <exec.mainClass>com.mycompany.pruebajava8.Pruebas</exec.mainClass>
+        <maven.compiler.release>17</maven.compiler.release>
+        <exec.mainClass>com.mycompany.interfaz.Principal</exec.mainClass>
     </properties>
     
     <dependencies>
@@ -90,7 +90,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>com.mycompany.main.Main</mainClass>
+                            <mainClass>com.mycompany.interfaz.Principal</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
